<resources>
    <string name="app_name">Cats</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">Cats</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="receiving">Receiving</string>
    <string name="dispatch">Dispatch</string>
    <string name="settings">Settings</string>
    <string name="scan_detail">Please scan the project code</string>
    <string name="title_activity_receiving_form">Receiving Form</string>
    <string name="waybill_label">Waybill</string>
    <string name="grn_label">GRN</string>
    <string name="project_code">Project Code</string>
    <string name="commodity">Commodity</string>
    <string name="uom">UOM</string>
    <string name="quantity">Qty</string>
    <string name="transporter">Transporter</string>
    <string name="plate_number">Plate #</string>
    <string name="project_info">Project Info</string>
    <string name="enter_email">Enter Email</string>
    <string name="select_commodity">Select Commodity</string>
    <string name="receiving_details">Receiving Details</string>
    <string name="pick_uom">Pick a unit of measure</string>
    <string name="pick_transporter">Pick a transporter</string>
    <string name="qr_code">QR Code</string>
    <string name="qr_guide">Your QR Code should look something like the image. Click on the image to take a snapshot. It should take only seconds.</string>
    <string name="save_form">Save</string>
    <string name="invalid_form">Invalid Form</string>
    <string name="id">Id</string>
    <string name="saved">Saved</string>
    <string name="warehouse">Warehouse</string>
    <string name="hub">Hub</string>
    <string name="receiving_date">Receiving Date</string>
    <string name="number">%1d</string>
    <string name="number_double">%1f</string>
    <string name="enter_project_code">Enter project code</string>
    <string name="scan">Scan QR Code</string>
    <string name="get_project_code_and_commodity_from_qr_code">Get Project Code and Commodity from QR Code</string>
    <string name="malformed_qr">Malformed QR Code</string>
    <string name="received_on">Received On %s</string>
    <string name="grn_text"><b>GRN:</b> %s</string>
    <string name="setting_up">Setting Up</string>
    <string name="fetch_transporters_error">Could not fetch transporters</string>
    <string name="fetching_transporters">Fetching Transporters …</string>
    <string name="fetched_transporters">Finished Fetching Transporters</string>
</resources>
