<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        style="@style/inside_card">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/grn_label"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/grn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/inside_card">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/receiving_date"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/date_received"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/inside_card">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hub"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/hub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/inside_card">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/warehouse"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/warehouse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/inside_card">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/transporter"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/transporter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/inside_card">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>