<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/intro_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/scan_detail"
            android:textSize="28sp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/qr_code"
            android:src="@drawable/qrcode"
            android:tint="@color/black_overlay"
            android:id="@+id/qr_code_image" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/default_padding"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/qr_guide" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/received_items_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_playlist_add_black_24dp"
        fab:fab_colorNormal="@color/colorPrimary"
        fab:fab_colorPressed="@color/colorAccent"
        fab:fab_colorRipple="@color/colorAccent"/>

</RelativeLayout>